# ava-backend

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs
src/controller/: crud_controller.rs  detail_controller.rs  experience_controller.rs  mod.rs  project_controller.rs  tech_stack_controller.rs  user_controller.rs
src/model/: detail_model.rs  experience_model.rs  mod.rs  project_model.rs  tech_stack_model.rs  user_model.rs
src/repository/: detail_repo.rs  mod.rs  mongodb_repo.rs
