[package]
name = "ava-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
argon2 = "0.4.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.17"
mongodb = "2.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
serde = "1.0.152"
sha2 = "0.10.6"
